# AI_Proxy_United

./: .gitignore  README.md
clients/Automation/: README.md  buildmac.sh  buildwin64.bat  buildwin_arm.bat  package.json  vite.config.js
clients/Automation/src/: App.vue  main.js
clients/Automation/src-tauri/: Cargo.toml  tauri.conf.json
clients/Automation/src-tauri/capabilities/: default.json
clients/Automation/src-tauri/icons/: icon.icns
clients/Automation/src-tauri/src/: lib.rs  main.rs
readme/: chatgptfunctions.sql  chatgptfunctions.xlsx  chatgptprompts.sql  chatgptprompts.xlsx  menu_suggest.xlsx  models.md  permissions.json  tips.md
src/: AI_Proxy.sln
src/AI_Proxy_Web/: AI_Proxy_Web.csproj  Dockerfile  DockerfileNode  Program.cs  builddocker.sh  buildwebsocket.sh  config.example.json
src/AI_Proxy_Web/Apis/: Api01AI.cs  ApiAi360.cs  ApiAliQwen.cs  ApiAliWanXiang.cs  ApiAudio.cs  ApiBaiChuan.cs  ApiClaude.cs  ApiDearApi.cs  ApiDeepDataSpace.cs  ApiDeepSeek.cs  ApiDeerApiImage.cs  ApiDeerApiProxy.cs  ApiDoubao.cs  ApiDoubaoImage.cs  ApiFalAi.cs  ApiGoogleGemini.cs  ApiGrok.cs  ApiGroqLlama3.cs  ApiIdeogram.cs  ApiJinaAi.cs  ApiLumaAi.cs  ApiMidJourney.cs  ApiMiniMax.cs  ApiMoonShot.cs  ApiOpenAI.cs  ApiOpenAIImage.cs  ApiOpenAIOriginal.cs  ApiPPIO.cs  ApiPerplexity.cs  ApiSenseChat.cs  ApiStableDiffusion.cs  ApiStepFun.cs  ApiTencent.cs  ApiTencentImage.cs  ApiWenXin.cs  ApiWenXinImage.cs  ApiXfSpark.cs  ApiZhiPu.cs  OpenAIClient.cs
src/AI_Proxy_Web/Controllers/: AudioMessageSender.cs  BaseController.cs  BookFeishuController.cs  ChatController.cs  (+2 more)
(+130 files in other folders)
